--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ footer{
 	height: 80px;
 	text-align: center;
 	color: rgb(300,300,300);
+  
 }
 
 .footertext {
@@ -313,6 +314,8 @@ footer{
 	position:relative;
 	top: 50%;
 	transform: translateY(-50%);
+  text-shadow: 5px 5px 5px lightblue;
+  
 }
 
 /* image */
@@ -463,13 +466,3 @@ img.bouncecss:hover {
 .wrapper .discord:hover .tooltip:before{
   background:#7289DA;
 }
-
-.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto 
-}
-
