--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   
 }
 
+
 p {
 	font-family: sans-serif;
 	font-weight: 300;
@@ -38,15 +39,13 @@ p {
 h1 {
   color: #3e3f42;
 	margin: auto;
-  
 }
 
 h2 {
-    font-family: 'Space Mono', monospace;
+  font-family: 'Space Mono', monospace;
 }
 .large {
 	font-size: 6rem;
-  
 }
 
 .middle {
@@ -114,11 +113,14 @@ h2 {
 }
 
 .pfp {
-    position: absolute;
-    top: calc(50vh - 250px);
-    right: 10%;
-    border-radius: 30px;
-    width: 500px;
+  position: absolute;
+  top: calc(50vh - 250px);
+  right: 10%;
+  border-radius: 30px;
+  width: 500px;
+  background: #6BD2D7;
+  cursor: pointer; 
+
 }
 
 
@@ -192,7 +194,7 @@ h2 {
 }  
 
 /*responsive*/
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1150px) {
     .pfp {
         display: none;
     }
@@ -275,7 +277,7 @@ footer{
 	position:relative;
 	top: 50%;
 	transform: translateY(-50%);
-  text-shadow: 5px 5px 5px lightblue;
+  text-shadow: 2px 2px 2px lightblue;
   
 }
 
@@ -298,88 +300,60 @@ img.bounceNOW {
 
 /*Social media buttons */
 
-.wrapper{
-  display:inline-flex;
-}
-.wrapper .icon{
-  margin: 0 20px;
-  cursor:pointer;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
+.btn {
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  background: #f1f1f1;
+  margin: 10px;
+  border-radius: 30%;
+  box-shadow: 0 5px 15px -5px #00000070;
+  color: #3498db;
+  overflow: hidden;
   position: relative;
-  z-index:2;
 }
-.wrapper .icon span{
-  position:relative;
-  z-index:2;
-  height: 60px;
-  width: 60px;
-  display:block;
-  background: #fff;
-  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
-  border-radius:50%;
-  text-align:center;
-  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+.btn i {
+  line-height: 90px;
+  font-size: 26px;
+  transition: 0.2s linear;
 }
-.wrapper .icon span i{
-  font-size:25px;
-  line-height:60px;
+
+.btn:hover i {
+  transform: scale(1.3);
+  color: #f1f1f1;
 }
-.wrapper .icon .tooltip{
-  position:absolute;
-  top:0px;
-  background: #fff;
-  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
-  font-size: 20px;
-  padding: 10px 18px;
-  border-radius: 25px;
-  color:white;
-  opacity:0;
-  pointer-events: none;
-  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+.btn::before {
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: #3498db;
+  transform: rotate(45deg);
+  left: -110%;
+  top: 90%;
 }
-.wrapper .icon:hover .tooltip{
-  opacity:1;
-  pointer-events: auto;
-  top:-70px;
+
+.btn:hover::before {
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
 }
-.wrapper .icon .tooltip:before{
-  position:absolute;
-  content:"";
-  height:15px;
-  width:15px;
-  bottom:-8px;
-  left:50%;
-  transform: translateX(-50%) rotate(45deg);
-}
-.wrapper .icon:hover span,
-.wrapp .icon:hover .tooltip{
-  text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
-}
-.wrapper .icon:hover span{
-  color: #fff;
-}
-.wrapper .replit:hover span,
-.wrapper .replit:hover .tooltip,
-.wrapper .replit:hover .tooltip:before{
-  background: #fb4c2d;
-}
-.wrapper .twitter:hover span,
-.wrapper .twitter:hover .tooltip,
-.wrapper .twitter:hover .tooltip:before{
-  background:#46C1F6;
-}
-.wrapper .github:hover span,
-.wrapper .github:hover .tooltip,
-.wrapper .github:hover .tooltip:before{
-  background:#333;
-}
-.wrapper .discord:hover span,
-.wrapper .discord:hover .tooltip,
-.wrapper .discord:hover .tooltip:before{
-  background:#7289DA;
+
+@keyframes aaa {
+  0% {
+    left: -110%;
+    top: 90%;
+  }
+  50% {
+    left: 10%;
+    top: -30%;
+  }
+  100% {
+    top: -10%;
+    left: -10%;
+  }
 }
 
 .container {
@@ -388,108 +362,6 @@ img.bounceNOW {
   padding: 0 20px;
 }
 
-.slide {
-  position: relative;
-  cursor: pointer;
-  height: 80vh;
-  flex: 1;
-  width: 100%;
-  margin: 10px;
-  border-radius: 20px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  transition: .5s;
-}
-
-
-.slide > img {
-  width: 100%;
-  height: 100%;
-}
-
-.slide > h3 {
-  position: absolute;
-  color: #fff;
-  bottom: 10px;
-  left: 10px;
-  opacity: 0;
-  transition: .5s
-  
-}
-
-.slide > p {
-  position: absolute;
-  color: #fff;
-  bottom: 10px;
-  left: 10px;
-  opacity: 0;
-  transition: .5s
-}
-
-.slide.active {
-  flex: 10;
-}
-
-.slide.active > h3{
-  opacity: 1
-}
-
-.button {
-  appearance: button;
-  background-color: #ff4747;
-  background-image: none;
-  border: 1px solid #000;
-  border-radius: 4px;
-  box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-  margin: 0 5px 10px 0;
-  overflow: visible;
-  padding: 12px 40px;
-  text-align: center;
-  text-transform: none;
-  touch-action: manipulation;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-  opacity: 0;
-}
-
-.button:focus {
-  text-decoration: none;
-}
-
-.button:hover {
-  text-decoration: none;
-}
-
-.button:active {
-  box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
-  outline: 0;
-}
-
-.button:not([disabled]):active {
-  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
-  transform: translate(2px, 2px);
-}
-
-.slide.active > .button{
-  opacity: 1
-}
-
-@media (min-width: 768px) {
-  .button {
-    padding: 12px 50px;
-  }
-}
 
 .center {
   position: absolute;
@@ -644,4 +516,152 @@ img.bounceNOW {
   text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
   line-height: 1.4;
   word-spacing: 100vw;
+}
+
+.content-bar {
+  background-color: #F5F5F5;
+  color: #333333;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.about-me-text {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin: 0;
+}
+
+.about-me-subtext {
+  font-size: 1em;
+  margin: 5px 0 0 0;
+}
+
+/*tooltip*/
+/* Add this attribute to the element that needs a tooltip */
+[data-tooltip] {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
+  position: absolute;
+  bottom: 150%;
+  left: 50%;
+  margin-bottom: 5px;
+  margin-left: -80px;
+  padding: 7px;
+  width: 160px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+/* Triangle hack to make tooltip look like a speech bubble */
+[data-tooltip]:after {
+  position: absolute;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+/*hire BTN*/ 
+:root {
+  --motion-ease: cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  --motion-duration: 0.3s;
+}
+
+button {
+  appearance: none;
+  background: transparent;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  font: inherit;
+  font-weight: 500;
+  line-height: 1;
+  padding: 1em 1.5em;
+  position: relative;
+  transition: filter var(--motion-duration);
+}
+
+button:hover {
+  filter: brightness(1.1);
+}
+
+button:active {
+  filter: brightness(0.9);
+}
+
+button > span {
+  display: block;
+  position: relative;
+  transition: transform var(--motion-duration) var(--motion-ease);
+  z-index: 4;
+  color: #333333;
+}
+
+button:hover > span {
+  transform: scale(1.05);
+}
+
+button:active > span {
+  transform: scale(0.95);
+}
+
+button > svg {
+  fill: #FFEA20;
+  position: absolute;
+  top: -5%;
+  left: -5%;
+  width: 110%;
+  height: 110%;
+}
+
+button > svg > path {
+  transition: var(--motion-duration) var(--motion-ease);
+}
+
+button:hover > svg > path {
+  d: path("M0,0 C0,-5 100,-5 100,0 C105,0 105,100 100,100 C100,105 0,105 0,100 C-5,100 -5,0 0,0");
+}
+
+button:active > svg > path {
+  d: path("M0,0 C30,10 70,10 100,0 C95,30 95,70 100,100 C70,90 30,90 0,100 C5,70 5,30 0,0");
 }
