Some style update, ordered files and minified code

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -519,7 +519,7 @@ img.bounceNOW {
 }
 
 .content-bar {
-  background-color: #F5F5F5;
+  background: #F5F5F5;
   color: #333333;
   padding: 10px 20px;
   border-radius: 5px;
