--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&family=Calligraffitti&display=swap');
 
 * {
-    transition: all 0.2s ease-in-out;
-    z-index: 3;
+  transition: all 0.2s ease-in-out;
+  z-index: 3;
 }
 
 @keyframes fade-in {
@@ -12,16 +12,16 @@
 }
 
 html {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
-    background: #fff;
-    color: #000;
-    font-family: Inter, sans-serif;
-    padding: 5%;
-    height: 100vh;
+  background: #fff;
+  color: #000;
+  font-family: Inter, sans-serif;
+  padding: 5%;
+  height: 100vh;
 }
 
 p {
@@ -75,30 +75,30 @@ h2 {
 
 
 .link {
-    text-decoration: none;
-    background-size: 0% 0.1em;
-    background-position: 100% 95%;
-    background-repeat: no-repeat;
-    transition: background-size 0.5s;
-    color: #26b6df;
-    cursor: pointer;
-    position: relative;
+  text-decoration: none;
+  background-size: 0% 0.1em;
+  background-position: 100% 95%;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s;
+  color: #26b6df;
+  cursor: pointer;
+  position: relative;
 }
 
 
 .link::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 4px;
-    background-color: #18272F;
-    bottom: 0;
-    left: 0;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform .3s ease-in-out;
-  }
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: #18272F;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
 
 .link:hover::before {
   transform-origin: left;
@@ -106,9 +106,9 @@ h2 {
 }
 
 .name {
-    position: absolute;
-    top: 40%;
-    left: 10%
+  position: absolute;
+  top: 40%;
+  left: 10%
 }
 
 .pfp {
@@ -123,8 +123,8 @@ h2 {
 
 
 .content {
-    position: relative;
-    top: 100vh
+  position: relative;
+  top: 100vh
 }
 /*scroll bar*/
 
@@ -160,8 +160,7 @@ h2 {
   -webkit-animation: arrow 2s infinite; 
 }
 
-@keyframes arrow
-{
+@keyframes arrow {
   0% {opacity:0}
   40% {opacity:1}
   80% {opacity:0}
@@ -193,40 +192,40 @@ h2 {
 
 /*responsive*/
 @media screen and (max-width: 1150px) {
-    .pfp {
-        display: none;
-    }
-    #blob {
-       display: none;
-    }
-    #ADEV {
-        font-size: 2rem
-    }
-    body {
-      padding: 3%;
-    }
-    .card__content > figure {
+  .pfp {
       display: none;
-    }
-    .card__content {
-      grid-template-columns: 1fr; /* set the width of the columns to take up the entire space */
-      transform-origin: 50% 0%;
-    }
-    .card__content > div {
-      grid-column: 1 / -1; /* span the entire grid area */
-    }
-    .greet {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
+  }
+  #blob {
+     display: none;
+  }
+  #ADEV {
+      font-size: 2rem
+  }
+  body {
+    padding: 3%;
+  }
+  .card__content > figure {
+    display: none;
+  }
+  .card__content {
+    grid-template-columns: 1fr; /* set the width of the columns to take up the entire space */
+    transform-origin: 50% 0%;
+  }
+  .card__content > div {
+    grid-column: 1 / -1; /* span the entire grid area */
+  }
+  .name {
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+  }
 }
 
 @media screen and (max-width: 500px) {
-    .title {
-        font-size: 40px
-    }
+  .title {
+      font-size: 40px
+  }
 }
 
 footer{
@@ -702,6 +701,9 @@ ul {
     padding: 40px;
     width: 60%;
   }
+  .smile {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -711,4 +713,74 @@ ul {
     padding: 60px;
     width: 50%;
   }
+}
+
+/*text drop*/
+
+
+#text-drop {
+  position: relative;
+  display: flex;
+  font-size:6rem;
+  font-family: arial;
+  font-weight: 900;
+}
+
+.r {
+  opacity:0;
+  animation: drop .4s linear forwards;
+  color: #9b5de5;
+}
+
+.a {
+  opacity:0;
+  animation: drop .4s linear forwards .2s;
+  color: #f15bb5;
+}
+
+.a2 {
+  opacity:0;
+  animation: drop .4s linear forwards .4s;
+  color: #00bbf9;
+}
+
+.d {
+  opacity:0;
+  animation: drop .4s linear forwards .6s;
+  color: #ffbb00;
+}
+
+.s {
+  opacity:0;
+  animation: drop .4s linear forwards .8s;
+  color: #00f5d4;
+}
+
+.e {
+  opacity:0;
+  animation: drop .4s linear forwards 1s;
+  color: #8700f5;
+}
+
+@keyframes drop {
+  0% {transform: translateY(-200px) scaleY(0.9); opacity: 0;}
+  5% {opacity: .7;}
+  50% {transform: translateY(0px) scaleY(1); opacity: 1;}
+  65% {transform: translateY(-17px) scaleY(.9); opacity: 1;}
+  75% {transform: translateY(-22px) scaleY(.9); opacity: 1;}
+  100% {transform: translateY(0px) scaleY(1); opacity: 1;}
+}
+
+.l {
+  opacity:0;
+  animation: drop .4s linear forwards 1.2s;
+  color: #9b5de5;
+}
+
+.smile {
+  opacity:0;
+  animation: drop .4s linear forwards 3s;
+  color: #5de5b1;
+  font-size:90px;
+  margin-left:15px;
 }
