--- a/CSS/style.css
+++ b/CSS/style.css
@@ -784,3 +784,25 @@ ul {
 .red { color: red}
 .white { color: gray} /* because its invisible otherwise */
 .blue { color: blue}
+
+raadsel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  color: #999;
+}
+
+.made-by {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.made-by img {
+  margin-left: 5px;
+  height: 30px;
+}
