--- a/CSS/style.css
+++ b/CSS/style.css
@@ -635,6 +635,13 @@ button:active > svg > path {
     "M0,0 C30,10 70,10 100,0 C95,30 95,70 100,100 C70,90 30,90 0,100 C5,70 5,30 0,0"
   );
 }
+
+@media only screen and (max-width: 600px) {
+
+  .buttons button {
+    margin-bottom: 3px;
+  }
+}
 /*Modal*/
 .skills-modal {
   display: none;
@@ -658,14 +665,14 @@ button:active > svg > path {
   max-height: 600px;
   overflow-y: auto;
   border-radius: 10px;
-  padding-top: 50px; /* add padding to the top to make room for the sticky elements */
+  padding-top: 0px; /* add padding to the top to make room for the sticky elements */
 }
 
 .skills-title {
   border-radius: 10px;
   text-align: center;
   position: sticky; /* make the h2 tag sticky */
-  top: 0;
+  top: 0px !important;
   background-color: #fefefe;
   padding: 10px;
   margin: 0;
@@ -694,11 +701,11 @@ ul {
   margin-bottom: 5px;
   background-color: #f2f2f2;
   border-radius: 5px;
+  cursor: default !important;
 }
 
 .skillslist:hover {
   background-color: #e6e6e6;
-  cursor: pointer;
 }
 
 .skills-close {
@@ -710,23 +717,6 @@ ul {
   cursor: pointer;
 }
 
-@media only screen and (min-width: 768px) {
-  /* Apply these styles when the screen width is at least 768px */
-  .skills-modal-content {
-    margin: 10% auto;
-    padding: 40px;
-    width: 60%;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  /* Apply these styles when the screen width is at least 992px */
-  .skills-modal-content {
-    margin: 5% auto;
-    padding: 60px;
-    width: 50%;
-  }
-}
 
 /*text drop*/
 
@@ -842,9 +832,9 @@ raadsel {
 }
 
 :root {  
-  --purple: rgb(123, 31, 162);
-  --violet: rgb(103, 58, 183);
-  --pink: rgb(244, 143, 177);
+  --purple: rgb(255, 0, 0);
+  --violet: rgb(240, 240, 240);
+  --pink: rgb(0, 0, 255);
 }
 
 @keyframes background-pan {
